# kokopelli-vcv

./: .gitignore  COMMERCIAL_LICENSE.txt  LICENSE.txt  Makefile  README.md  README.org  copyright.txt  credits.org  plugin.json  todo.org
dep/lib/circleengine/: Cargo.toml  build.rs
dep/lib/circleengine/src/: lib.rs
res/: shutterstock_2056612184.eps
res/sourced/: galaxy.eps  sunandmoon.eps
src/: 4Signal.cpp  Frame.cpp  Frame.hpp  FrameX.cpp  FrameX.hpp  Frame_IO.hpp  Layer.cpp  Layer.hpp  MidiCC.cpp  Play.cpp  Scene.cpp  Scene.hpp  Signal.cpp  Signal.hpp  Signal4.cpp  Signal4.hpp  assert.hpp  expanders.hpp  kokopelli.cpp  kokopelli.hpp  kokopelliinterfaces.cpp  kokopelliinterfaces.hpp  kokopellivcv.cpp  kokopellivcv.hpp  kokpelliinterfaces.cpp  kokpelliinterfaces.hpp  menu.hpp  module.cpp  module.hpp  myrisa.cpp  myrisa.hpp  plugin.cpp  plugin.hpp  scene.cpp  todo.org  tribalinterfaces.cpp  tribalinterfaces.hpp  widgets.hpp
src/components/: Antipop.hpp  Layer.hpp  PhaseBuffer.hpp  Scene.cpp  Scene.hpp  Section.cpp  Section.hpp
src/dsp/: Antipop.hpp  AntipopFilter.hpp  AntipopReader.hpp  Fader.hpp  Interpolation.hpp  LFO.hpp  LightBlinker.hpp  LongPressButton.hpp  PhaseAnalyzer.hpp  PhaseBuffer.hpp  PhaseDivider.hpp  PhaseOscillator.hpp  Saturate.hpp  Signal.hpp  TriggeredAntipopFilter.hpp
src/emernet/: CapturedNode.hpp  Controller.hpp  Emernet.hpp  EmernetConductor.hpp  EmernetNode.hpp  EmernetNodeGroup.hpp  EmernetTraverser.hpp  Gko.hpp  LiveNode.hpp  NodeGroupOutputCalculator.hpp  Timeline.hpp  (+1 more)
trash/: design.org  notes.org  todo.org  ux.org
(+166 files in other folders)
