[package]
name = "circleengine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "circleengine"           # The name of the target.
crate-type = ["staticlib"]
path = "src/lib.rs"    # The source file of the target.